# drf_todo

./: .env  Makefile  TODO  db.sqlite3  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
compose/compose/django/: Dockerfile  entrypoint
compose/compose/nginx/: Dockerfile
compose/django/: Dockerfile  entrypoint
compose/nginx/: Dockerfile  nginx.conf
root/: settings.py  swagger.py  urls.py
tasks/: admin.py  models.py  pagination.py  serializer.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py
users/: models.py  serializers.py  urls.py  views.py
users/models/: base.py
users/tests/: test_view.py
