[tool.poetry]
name = "drf-todo"
version = "0.1.0"
description = ""
authors = ["ozoda <ozodas531@gmail.com>"]
readme = "README.md"
packages = [{include = "drf_todo"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
drf-yasg = "^1.21.7"
pytest-django = "^4.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
